--- a/project-manager/src/index.css
+++ b/project-manager/src/index.css
@@ -12,8 +12,9 @@ code {
     monospace;
 }
 
-.site-layout .site-layout-background {
-  background: #fff;
+.site-layout {
+  background: #f5f5f8;
+  margin-left: 200px;
 }
   [data-theme="dark"] .site-layout .site-layout-background {
     background: #141414;
