--- a/project-manager/src/style/style.css
+++ b/project-manager/src/style/style.css
@@ -1,5 +1,63 @@
+/* Sidebar */
+.ant-layout-sidebar {
+  overflow: auto;
+  height: 100vh;
+  position: fixed;
+  left: 0;
+}
 .logo {
   height: 32px;
   background: rgba(255, 255, 255, 0.2);
   margin: 16px;
+}
+
+/* Navbar */
+.site-layout-background {
+  padding: 0;
+}
+.ant-btn {
+  text-transform: uppercase;
+  background-color: #5c77ff;
+  color: #fff;
+  font-weight: 500;
+  transition: all ease-in 0.4s;
+}
+.add-new-btn {
+  margin-left: 2rem;
+}
+.ant-layout-header {
+  background: #fff;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
+.search-input {
+  margin-right: 2rem;
+}
+.avatar {
+  margin-right: 1rem;
+  cursor: pointer;
+}
+.avatar img {
+  max-width: 80%;
+  width: 64px;
+  border-radius: 50%;
+}
+.ant-dropdown-arrow {
+  display: none;
+}
+.ava-dropdown {
+  top: -10px;
+}
+.ava-dropdown > .ant-dropdown-menu-item {
+  padding: 10px 30px;
+}
+
+/* Content */
+.ant-layout-content {
+  margin: 24 16 0;
+  overflow: initial;
+}
+.content-background {
+  background-color: #f5f5f8;
 }
