--- a/my-app/src/style/style.css
+++ b/my-app/src/style/style.css
@@ -1,17 +1,18 @@
 /* Sidebar */
-.ant-layout-sidebar {
-  overflow: auto;
-  height: 100vh;
-  position: fixed;
-  left: 0;
-}
 .logo {
   height: 32px;
-  background: rgba(255, 255, 255, 0.2);
+  background-image: url('../images/logoHCN.png');
+  background-color: #f59f99;
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
   margin: 16px;
 }
 
 /* Navbar */
+.site-layout {
+  margin-left: 0;
+}
 .site-layout-background {
   padding: 0;
 }
@@ -49,6 +50,10 @@
 }
 .ava-dropdown > .ant-dropdown-menu-item {
   padding: 10px 30px;
+}
+
+.anticon-bars {
+  cursor: pointer;
 }
 
 /* Content */
@@ -179,3 +184,78 @@
   font-size: 1.125rem;
   font-weight: 500;
 }
+
+/* RESPONSIVE */
+.sidebar-enter {
+  opacity: 0;
+  transform: scale(0.9);
+}
+.sidebar-enter-active {
+  opacity: 1;
+  transform: translateX(0);
+  transition: opacity 300ms, transform 300ms;
+}
+.sidebar-exit {
+  opacity: 1;
+}
+.sidebar-exit-active {
+  opacity: 0;
+  transform: scale(0.9);
+  transition: opacity 300ms;
+}
+
+@media screen and (max-width: 768px) {
+  .ant-layout-header {
+    padding: 0 25px !important;
+  }
+}
+
+@media screen and (max-width: 576px) {
+  .site-layout-background {
+    padding: 0 15px !important;
+  }
+  .add-new-btn {
+    font-size: 11px !important;
+    margin-left: 1rem;
+    height: 25px !important;
+    padding: 4px 8px !important;
+  }
+  .ant-input-search > .ant-input-group > .ant-input-group-addon .ant-input-search-button {
+    font-size: 11px !important;
+    height: 25px !important;
+    padding: 4px 8px !important;
+  }
+  .search-input {
+    margin-right: 1rem;
+  }
+  .search-input .ant-input {
+    padding: 2px 10px;
+    font-size: 13px;
+  }
+  .avatar {
+    margin-right: 0;
+  }
+  .avatar img {
+    max-width: 69%;
+  }
+
+  .content {
+    padding: 1.5rem;
+  }
+
+  .content .content-project {
+    margin-right: 0;
+  }
+
+  .content-project-task > button {
+    width: 100%;
+  }
+
+  .add-task > input {
+    width: 75%;
+  }
+  .btn-task-create {
+    left: 73%;
+  }
+}
+
