--- a/back_end/test/src/resources/views/auth.hbs
+++ b/back_end/test/src/resources/views/auth.hbs
@@ -6,7 +6,7 @@
 </div>
 
   {{/if}}
-  <h1>Login</h1>
+  <h1>WTF</h1>
     <form method="POST" >
   <div class="form-group" >
     <label for="search-input">Email</label>
