--- a/my-app/src/index.css
+++ b/my-app/src/index.css
@@ -3,6 +3,13 @@ body {
     font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen', 'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue', sans-serif;
     -webkit-font-smoothing: antialiased;
     -moz-osx-font-smoothing: grayscale;
+    /* overflow-y: hidden; */
+}
+
+.sizeAva{
+    width: 300px;
+    height: 300px;
+    border-radius: 50%;
 }
 
 code {
@@ -12,6 +19,11 @@ code {
 .site-layout {
     background: #f5f5f8;
     margin-left: 200px;
+}
+
+.inf-page{
+    height: 700px;
+    margin-top: 150px;
 }
 
 [data-theme="dark"] .site-layout .site-layout-background {
