--- a/back_end/test/src/resources/views/deletedComment.hbs
+++ b/back_end/test/src/resources/views/deletedComment.hbs
@@ -10,9 +10,9 @@
   <form method="POST" >
       <div class="form-group">
         <div class="input-group mb-3">
-            <input type="text" name='q' class="form-control" placeholder="Search">
+            <input type="text" name='commentId' class="form-control" placeholder="comment id">
             <div class="input-group-append">
-                <button class="btn btn-success" type="submit">Search</button>
+                <button class="btn btn-success" type="submit">Delete</button>
             </div>
         </div>
     </div>
