--- a/back_end/test/src/resources/views/editUser.hbs
+++ b/back_end/test/src/resources/views/editUser.hbs
@@ -4,7 +4,7 @@
   <h1>Edit Information</h1>
     <form method="POST" >
   <div class="form-group" >
-    {{!-- <input type="text" name="username" placeholder="Username"> --}}
+    <input type="text" name="username" placeholder="Username">
     <input type="mail" name="mail" placeholder="Mail">
     <input type="date" name="date" placeholder="Date of birth">
     <input type="text" name="address" placeholder="Address">
