--- a/my-app/src/style/style.css
+++ b/my-app/src/style/style.css
@@ -178,7 +178,7 @@ li {
 }
 
 .ant-modal-body .task-attachment {
-  margin-bottom: 2rem;
+  margin: 2rem 0;
 }
 
 .ant-modal-body .task-comment .user-comment {
